force-app/main/default/objects/CAO_Product_Account__c/CAO_Product_Account__c.object-meta.xml
<CustomObject>
    <label>CAO Product Account</label>
    <nameField>
        <displayFormat>CAOPA-{0000}</displayFormat>
        <label>CAO Product Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAO Product Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>