force-app/main/default/objects/CAO_Product_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CAO Product Accounts</relationshipLabel>
    <relationshipName>CAO_Product_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>