force-app/main/default/objects/CAO_Product_Account__c/fields/Account_Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Funded_Date__c</fullName>
    <label>Account Funded Date</label>
    <type>Date</type>
</CustomField>