force-app/main/default/objects/CAO_Product_Account__c/fields/NCAO__c.field-meta.xml
<CustomField>
    <fullName>NCAO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCAO</label>
    <referenceTo>NCAO__c</referenceTo>
    <relationshipLabel>CAO Product Accounts</relationshipLabel>
    <relationshipName>CAO_Product_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>