force-app/main/default/objects/CAO_Product_Account__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CAO Product Accounts</relationshipLabel>
    <relationshipName>CAO_Product_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>